methods.slug.SlugTracking.scala.error
Compilation error:
SlugTracking:-9: error: not found: value isFacingTrail
			if (isFacingTrail()) {
                            ^SlugTracking:2: error: method run is defined twice
  conflicting symbols both originated in file 'plm.runtime52.SlugTracking'
override def run() {
             ^